# FastAPI-JWT-React

./: .gitignore  README.md
backend/: README.md  main.py  pyproject.toml  requirements.txt
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: user.py
backend/app/schemas/: user.py
backend/app/services/: auth_service.py
